# BubbleH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  license.txt
scenes/: Quad_bubble.hiplc  blowing_bubble.hiplc  constrained_bubble.hiplc  pinching_rings.hiplc  simple_bubble.hiplc  sphere.hiplc  testbubble.hiplc  two_bubbles.hiplc  wand.hiplc
source/: CMakeLists.txt  MeshIO.cpp  MeshIO.h  SOP_bubble.cpp  SOP_bubble.h  SimOptions.cpp  SimOptions.h  VS3D.cpp  VS3D.h  VS3DExplicit.cpp
